--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">BonApp</string>
+    <string name="app_name" translatable="false">BonApp</string>
     <string name="rechercheTitleID">Recherche</string>
     <string name="favorisTitleID">Favoris</string>
     <string name="parametreTitleID">Paramètres</string>
@@ -11,4 +11,9 @@
     <string name="textRechRec">Recherche de recettes</string>
     <string name="rechercheUser">Recherche d\'utilisateur</string>
     <string name="valider">Valider</string>
+    <string name="listeVide">Aucune recette correspondante</string>
+    <string name="rechercheIndications">Ingrédients</string>
+    <string name="utilisateurs">Utilisateurs</string>
+    <string name="recettes">Recettes</string>
+    <string name="recette">Recette</string>
 </resources>
