--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -3,7 +3,7 @@
     <string name="app_name">BonApp</string>
     <string name="buttonRechRec">Recipes</string>
     <string name="buttonRechUser">Users</string>
-    <string name="favorisTitleID">Favorites</string>
+    <string name="favorisTitleID">Add to favorites</string>
     <string name="listeVide">No matching recipe</string>
     <string name="parametreTitleID">Parameters</string>
     <string name="rechercheTitleID">Search</string>
@@ -15,4 +15,6 @@
     <string name="utilisateurs">Users</string>
     <string name="recettes">Recipes</string>
     <string name="recette">Recipe</string>
+    <string name="account">Account</string>
+    <string name="requesterror">Request error : </string>
 </resources>
