--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name" translatable="false">BonApp</string>
     <string name="rechercheTitleID">Recherche</string>
-    <string name="favorisTitleID">Favoris</string>
+    <string name="favorisTitleID">Ajouter aux favoris</string>
     <string name="parametreTitleID">Paramètres</string>
     <string name="userTitleID">Login</string>
 
@@ -16,4 +16,6 @@
     <string name="utilisateurs">Utilisateurs</string>
     <string name="recettes">Recettes</string>
     <string name="recette">Recette</string>
+    <string name="account">Compte</string>
+    <string name="requesterror">Erreur requête :</string>
 </resources>
