--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -18,4 +18,24 @@
     <string name="account">Account</string>
     <string name="requesterror">Request error : </string>
     <string name="chargementFav">Loading favorites</string>
+    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="error_field_required">This field is required</string>
+    <string name="error_incorrect_password">This password is incorrect</string>
+    <string name="error_invalid_email">This email address is invalid</string>
+    <string name="error_invalid_password">This password is too short</string>
+    <string name="permission_rationale"></string>
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password</string>
+    <string name="title_activity_login">Sign in</string>
+    <string name="username">Username</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="login">Log in</string>
+    <string name="title_activity_register">Register</string>
+    <string name="register">Register</string>
+    <string name="createaccount">Create an account</string>
+    <string name="logout">Log out</string>
+    <string name="processing">Processing...</string>
+    <string name="wait">Patience!</string>
 </resources>
