--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -18,4 +18,23 @@
     <string name="account">Compte</string>
     <string name="requesterror">Erreur requête : </string>
     <string name="chargementFav">Chargement des favoris</string>
+    <string name="action_sign_in">Connexion ou inscription</string>
+    <string name="action_sign_in_short">Connexion</string>
+    <string name="error_field_required">Ce champ est obligatoire</string>
+    <string name="error_incorrect_password">Ce mot de passe est incorrect</string>
+    <string name="error_invalid_email">Cette adresse mail est invalide</string>
+    <string name="error_invalid_password">Ce mot de passe est trop court</string>
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Mot de passe</string>
+    <string name="title_activity_login">Connexion</string>
+    <string name="username">Nom d\'utilisateur</string>
+    <string name="password">Mot de passe</string>
+    <string name="email">Email</string>
+    <string name="login">Connexion</string>
+    <string name="title_activity_register">S\'enregistrer</string>
+    <string name="register">S\'enregistrer</string>
+    <string name="createaccount">Créer un compte</string>
+    <string name="logout">Déconnexion</string>
+    <string name="processing">Traitement en cours...</string>
+    <string name="wait">Patience!</string>
 </resources>
