--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,14 @@
         completions."
     </string>
     <string name="chargementFav">Chargement des favoris</string>
+    <string name="title_activity_register">S\'enregistrer</string>
+    <string name="email">Email</string>
+    <string name="login">Connexion</string>
+    <string name="password">Mot de passe</string>
+    <string name="username">Nom d\'utilisateur</string>
+    <string name="register">S\'enregistrer</string>
+    <string name="createaccount">Créer un compte</string>
+    <string name="logout">Déconnexion</string>
+    <string name="processing">Traitement en cours...</string>
+    <string name="wait">Patience!</string>
 </resources>
