--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,4 +43,7 @@
     <string name="logout">Déconnexion</string>
     <string name="processing">Traitement en cours...</string>
     <string name="wait">Patience!</string>
+    <string name="facebook_app_id" translatable="false">887394014679392</string>
+    <string name="title_activity_login_activity_fb">LoginActivityFB</string>
+    <string name="action_settings">Settings</string>
 </resources>
