Favorite recipe activity //todo: delete fav

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -38,4 +38,5 @@
     <string name="logout">Log out</string>
     <string name="processing">Processing...</string>
     <string name="wait">Patience!</string>
+    <string name="suprfav">Remove from favorites</string>
 </resources>
