--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -37,4 +37,5 @@
     <string name="logout">Déconnexion</string>
     <string name="processing">Traitement en cours...</string>
     <string name="wait">Patience!</string>
+    <string name="suprfav">Retirer des favoris</string>
 </resources>
