--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -11,7 +11,7 @@
     <string name="textRechRec">Recipes search</string>
     <string name="userTitleID">Login</string>
     <string name="valider">Validate</string>
-    <string name="rechercheIndications">Ingredients</string>
+    <string name="rechercheIndications">Wished ingredients, title, ...</string>
     <string name="utilisateurs">Users</string>
     <string name="recettes">Recipes</string>
     <string name="recette">Recipe</string>
