--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -38,4 +38,16 @@
     <string name="processing">Traitement en cours...</string>
     <string name="wait">Patience!</string>
     <string name="suprfav">Retirer des favoris</string>
+    <string name="recetteexiste">Recette déjà dans vos favoris !</string>
+    <string name="erreurserveur">Erreur du serveur, réessayez plus tard !</string>
+    <string name="problemesurvenu">Problème survenu... Réessayez plus tard !</string>
+    <string name="favoris">Favoris</string>
+    <string name="ajouterfav">Ajouter cette recette à vos favoris ?</string>
+    <string name="oui">Oui !</string>
+    <string name="non">Non</string>
+    <string name="supprimerfav">Retirer cette recette de vos favoris ?</string>
+    <string name="recetteajoutee">Recette ajoutée à vos favoris !</string>
+    <string name="recettesupprimee">Recette retirée de vos favoris !</string>
+    <string name="chargement">Chargement...</string>
+    <string name="chargementmsg">Vos recettes arrivent !</string>
 </resources>
