--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,9 +44,9 @@
     <string name="processing">Traitement en cours...</string>
     <string name="wait">Patience!</string>
     <string name="facebook_app_id" translatable="false">887394014679392</string>
-    <string name="title_activity_login_activity_fb">LoginActivityFB</string>
+    <string name="title_activity_login_activity_fb">BonApp - connexion</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_favorite_recipe">FavoriteRecipeActivity</string>
+    <string name="title_activity_favorite_recipe">Recette</string>
     <string name="suprfav">Retirer des favoris</string>
     <string name="recetteexiste">Recette déjà dans vos favoris !</string>
     <string name="erreurserveur">Erreur du serveur, réessayez plus tard !</string>
